test/code/test_parse_error.out

Parse error: parse error in {{CWD}}/test/code/test_parse_error.php on line 3
