test/code/test_parse_error.php
<?php

this is a parser error!

